Refactor storage classes